...
    <string name="access_token">pk.eyJ1IjoibWlzdHJpayIsImEiOiJjbDB2c3htNjQxN3Z2M2lxZGViZ2VrNnhuIn0.dX12KQzXd3c6w0sses1fKw</string>
    <string name="name">Name</string>
    <string name="email_address">Email Address</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="create_your_account_info">Create Your Account Info</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="your_order_is_confirmed_thank_you">Your order is confirmed. Thank you!</string>
    <string name="back_to_map">Back to Map</string>
</resources>
